--- a/index.html
+++ b/index.html
@@ -91,24 +91,24 @@
 
   <!-- Projects Section -->
   <section id="projects">
-    <div class="projects container">
+    <div class="projects container">2
       <div class="projects-header">
         <h1 class="section-title">Recent <span>Projects</span></h1>
       </div>
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
+          <a href="https://ryuuzenvs.github.io/AsaaOnlineShop/#" target="_blank"><h1>AmelOnlineShop Website</h1></a>
+          <h2>Coding is Love</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/Screenshot (11).png" alt="img">
           </div>
         </div>
-        <div class="project-item">
+        <!-- <div class="project-item">
           <div class="project-info">
             <h1>Project 2</h1>
             <h2>Coding is Love</h2>
@@ -155,7 +155,7 @@
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -166,7 +166,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/female1 (2) (2).jpg" alt="img">
+          <img src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpeg" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -177,7 +177,9 @@
           exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
           Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
           reprehenderit libero enim!</p>
-        <a href="#" class="cta">Whatsapp (流 Ryuuzen.)</a>
+        <a href="https://api.whatsapp.com/send?phone=6285767292629" class="cta" target="_blank"><img src="https://cdn-icons-png.flaticon.com/128/4423/4423697.png" alt="" height="20" width="20"></a>
+        <a href="https://www.instagram.com/ryuuzenvs" class="cta" target="_blank"><img src="https://cdn-icons-png.flaticon.com/128/1384/1384063.png" alt="" height="20" width="20"></a>
+        <a href="https://www.tiktok.com/@ryuuzen_vv?lang=id-ID" class="cta" target="_blank"><img src="https://cdn-icons-png.flaticon.com/128/15713/15713399.png" alt="" height="20" width="20"></a>
       </div>
     </div>
   </section>
