--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="img/ppRyuuzen.png" type="image/x-icon">
+  <link rel="icon" href="img/ppWebPorto.png" type="image/x-icon">
   <title>WebsitePersonalRyuu</title>
 </head>
 
@@ -62,25 +62,25 @@
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
+          <a href="pdf-sertifikat/GL2599686866_certificate (1).pdf" class="pdfSertifikat" target="_blank"><h2 class="pembuatLink">Web Design</h2></a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
+          <a href="pdf-sertifikat/GL3334550354_certificate (2).pdf" class="pdfSertifikat" target="_blank"><h2 class="pembuatLink">Web Design</h2></a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
+          <a href="pdf-sertifikat/GL3440585192_certificate.pdf" class="pdfSertifikat" target="_blank"><h2 class="pembuatLink">Web Design</h2></a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
+          <a href="pdf-sertifikat/GL8571191829_certificate.pdf" class="pdfSertifikat" target="_blank"><h2 class="pembuatLink">Web Design</h2></a>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
