--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <a
                 href="https://ryuuzenvs.github.io/AsaaOnlineShop/#"
                 target="_blank"
-                ><h1>AmelOnlineShop Website</h1></a
+                ><h1> OnlineShop Website</h1></a
               >
               <h2>Coding is Love</h2>
               <p>
@@ -224,7 +224,7 @@
         <div class="col-left">
           <div class="about-img">
             <img
-              src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpeg"
+              src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpg"
               alt="img"
             />
           </div>
