--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="col-left">
           <div class="about-img">
             <img
-              src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpg"
+              src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpeg"
               alt="img"
             />
           </div>
