--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
           <div class="project-item">
             <div class="project-info">
               <a
-                href="https://ryuuzenvs.github.io/AsaaOnlineShop/#"
-                target="_blank"
-                ><h1> OnlineShop Website</h1></a
+                href="https://ryuuzenvs.github.io/AmelOnlineShop/#"
+                target="_blank"uu
+                ><h1>OnlineShop Website</h1></a
               >
               <h2>Coding is Love</h2>
               <p>
@@ -224,7 +224,7 @@
         <div class="col-left">
           <div class="about-img">
             <img
-              src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpeg"
+              src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpg"
               alt="img"
             />
           </div>
