--- a/index.html
+++ b/index.html
@@ -138,6 +138,82 @@
     </section>
     <!-- End Service Section -->
 
+    <!-- section galery -->
+    <section id="galery-amel">
+      <div class="about container">
+        <div class="col-left">
+        <div class="about-img">
+          <img
+          src="./img/ayang256.jpeg"
+          alt="img"
+          />
+          </div>
+          </div>
+          <div class="col-left">
+          <div class="about-img">
+           <img
+           src="./img/ayang 257.jpeg"
+           alt="img"
+          />
+        </div>
+         </div>
+         <div class="col-left">
+           <div class="about-img">
+           <img
+            src="./img/ayang 258.jpeg"
+          alt="img"
+           />
+           </div>
+           </div>
+        <div class="col-right">
+            <h1 class="section-title">My <span>be</span>st support<span> </span></h1>
+            <h2>Rizqy Amalia U</h2>
+          <!-- <h1 class="section-title">best Supp<span>ort</span></h1>
+          <h2>Rizqy Amalia U</h2> -->
+          <!-- <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Asperiores, velit alias eius non illum beatae atque repellat ratione
+            qui veritatis repudiandae adipisci maiores. At inventore
+            necessitatibus deserunt exercitationem cumque earum omnis ipsum rem
+            accusantium quis, quas quia, accusamus provident suscipit magni!
+            Expedita sint ad dolore, commodi labore nihil velit earum ducimus
+            nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!
+          </p> -->
+          <!-- <a
+            href="https://api.whatsapp.com/send?phone=6285767292629"
+            class="cta"
+            target="_blank"
+            ><img
+              src="https://cdn-icons-png.flaticon.com/128/4423/4423697.png"
+              alt=""
+              height="20"
+              width="20"
+          /></a> -->
+          <a
+            href="https://www.instagram.com/amaliaa.liy/"
+            class="cta"
+            target="_blank"
+            ><img
+              src="https://cdn-icons-png.flaticon.com/128/1384/1384063.png"
+              alt=""
+              height="20"
+              width="20"
+          /></a>
+          <a
+            href="https://www.tiktok.com/@eight_zeroo"
+            class="cta"
+            target="_blank"
+            ><img
+              src="https://cdn-icons-png.flaticon.com/128/15713/15713399.png"
+              alt=""
+              height="20"
+              width="20"
+          /></a>
+        </div>
+      </div>
+      </section>
+    <!-- end section galery -->
+
     <!-- Projects Section -->
     <section id="projects">
       <div class="projects container">
