--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul>
               <li><a href="#hero" data-after="Home">Home</a></li>
               <li><a href="#services" data-after="Service">Certificate</a></li>
+              <li><a href="#galery-amel" data-after="Galery">BestSupp</a></li>
               <li><a href="#projects" data-after="Projects">Projects</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
