--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
               <li><a href="#hero" data-after="Home">Home</a></li>
               <li><a href="#services" data-after="Service">Certificate</a></li>
-              <li><a href="#galery-amel" data-after="Galery">BestSupp</a></li>
+              <!--<li><a href="#galery-amel" data-after="Galery">BestSupp</a></li>-->
               <li><a href="#projects" data-after="Projects">Projects</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -140,7 +140,7 @@
     <!-- End Service Section -->
 
     <!-- section galery -->
-    <section id="galery-amel">
+    <!--<section id="galery-amel">
       <div class="about container">
         <div class="col-left">
         <div class="about-img">
@@ -189,7 +189,7 @@
               alt=""
               height="20"
               width="20"
-          /></a> -->
+          /></a> 
           <a
             href="https://www.instagram.com/amaliaa.liy/"
             class="cta"
@@ -212,7 +212,7 @@
           /></a>
         </div>
       </div>
-      </section>
+      </section>-->
     <!-- end section galery -->
 
     <!-- Projects Section -->
