--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
               <li><a href="#hero" data-after="Home">Home</a></li>
               <li><a href="#services" data-after="Service">Certificate</a></li>
-              <!--<li><a href="#galery-amel" data-after="Galery">BestSupp</a></li>-->
+              <li><a href="#galery-amel" data-after="Galery">BestSupp</a></li>
               <li><a href="#projects" data-after="Projects">Projects</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -140,7 +140,7 @@
     <!-- End Service Section -->
 
     <!-- section galery -->
-    <!--<section id="galery-amel">
+    <section id="galery-amel">
       <div class="about container">
         <div class="col-left">
         <div class="about-img">
@@ -169,9 +169,9 @@
         <div class="col-right">
             <h1 class="section-title">My <span>be</span>st support<span> </span></h1>
             <h2>Rizqy Amalia U</h2>
-          <!-- <h1 class="section-title">best Supp<span>ort</span></h1>
-          <h2>Rizqy Amalia U</h2> -->
-          <!-- <p>
+           <h1 class="section-title">best Supp<span>ort</span></h1>
+          <h2>Rizqy Amalia U</h2> 
+           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Asperiores, velit alias eius non illum beatae atque repellat ratione
             qui veritatis repudiandae adipisci maiores. At inventore
@@ -179,8 +179,8 @@
             accusantium quis, quas quia, accusamus provident suscipit magni!
             Expedita sint ad dolore, commodi labore nihil velit earum ducimus
             nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!
-          </p> -->
-          <!-- <a
+          </p> 
+           <a
             href="https://api.whatsapp.com/send?phone=6285767292629"
             class="cta"
             target="_blank"
@@ -212,7 +212,7 @@
           /></a>
         </div>
       </div>
-      </section>-->
+      </section>
     <!-- end section galery -->
 
     <!-- Projects Section -->
