--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           alt="img"
           />
           </div>
-          </div>
+          <!--</div>
           <div class="col-left">
           <div class="about-img">
            <img
@@ -165,13 +165,13 @@
           alt="img"
            />
            </div>
-           </div>
+           </div>-->
         <div class="col-right">
-            <h1 class="section-title">My <span>be</span>st support<span> </span></h1>
+            <!--<h1 class="section-title">My <span>be</span>st support<span> </span></h1>
             <h2>Rizqy Amalia U</h2>
-           <h1 class="section-title">best Supp<span>ort</span></h1>
-          <h2>Rizqy Amalia U</h2> 
-           <p>
+           <h1 class="section-title">best Supp<span>ort</span></h1>-->
+          <h2>Niaa</h2> 
+           <!--<p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Asperiores, velit alias eius non illum beatae atque repellat ratione
             qui veritatis repudiandae adipisci maiores. At inventore
@@ -189,9 +189,9 @@
               alt=""
               height="20"
               width="20"
-          /></a> 
+          /></a> -->
           <a
-            href="https://www.instagram.com/amaliaa.liy/"
+            href="https://www.instagram.com/niyylf?igsh=dmdzZW9mNmJvYWE3"
             class="cta"
             target="_blank"
             ><img
@@ -201,7 +201,7 @@
               width="20"
           /></a>
           <a
-            href="https://www.tiktok.com/@eight_zeroo"
+            href="https://www.tiktok.com/@ncyei?_t=8pcADUJPu5M&_r=1"
             class="cta"
             target="_blank"
             ><img
