--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="col-left">
         <div class="about-img">
           <img
-          src="./img/ayang256.jpeg"
+          src="./img/ayang256.jpg"
           alt="img"
           />
           </div>
