--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
         <div class="col-left">
         <div class="about-img">
           <img
-          src="./img/ayang256.jpg"
+          src="./img/nia1.jpg"
           alt="img"
           />
           </div>
-          <!--</div>
+          </div>
           <div class="col-left">
           <div class="about-img">
            <img
-           src="./img/ayang 257.jpeg"
+           src="./img/nia1.png"
            alt="img"
           />
         </div>
@@ -161,16 +161,16 @@
          <div class="col-left">
            <div class="about-img">
            <img
-            src="./img/ayang 258.jpeg"
+            src="./img/nia3.jpg"
           alt="img"
            />
            </div>
-           </div>-->
+           </div>
         <div class="col-right">
             <!--<h1 class="section-title">My <span>be</span>st support<span> </span></h1>
             <h2>Rizqy Amalia U</h2>
            <h1 class="section-title">best Supp<span>ort</span></h1>-->
-          <h2>Niaa</h2> 
+          <h2>Devina Ulfahnia Azzahra</h2> 
            <!--<p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Asperiores, velit alias eius non illum beatae atque repellat ratione
@@ -225,7 +225,7 @@
           <div class="project-item">
             <div class="project-info">
               <a
-                href="https://ryuuzenvs.github.io/AmelOnlineShop/#"
+                href="https://ryuuzenvs.github.io/NiaOnlineShop/#"
                 target="_blank"uu
                 ><h1>OnlineShop Website</h1></a
               >
