--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               width="20"
           /></a> -->
           <a
-            href="https://www.instagram.com/niyylf?igsh=dmdzZW9mNmJvYWE3"
+            href="https://www.instagram.com/cipooyyyy_?igsh=dWs2eGloNDU4bDJ3"
             class="cta"
             target="_blank"
             ><img
@@ -201,7 +201,7 @@
               width="20"
           /></a>
           <a
-            href="https://www.tiktok.com/@ncyei?_t=8pcADUJPu5M&_r=1"
+            href="https://www.tiktok.com/@sasaimoett_?_t=8qImBKE9Cvn&_r=1"
             class="cta"
             target="_blank"
             ><img
