--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <!--<h1 class="section-title">My <span>be</span>st support<span> </span></h1>
             <h2>Rizqy Amalia U</h2>
            <h1 class="section-title">best Supp<span>ort</span></h1>-->
-          <h2>Shiva Nur Auliaa</h2> 
+          <h2>Devina Ulfahnia Azzahra</h2> 
            <!--<p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Asperiores, velit alias eius non illum beatae atque repellat ratione
@@ -191,7 +191,7 @@
               width="20"
           /></a> -->
           <a
-            href="https://www.instagram.com/cipooyyyy_?igsh=dWs2eGloNDU4bDJ3"
+            href="https://www.instagram.com/niyylf?igsh=dmdzZW9mNmJvYWE3"
             class="cta"
             target="_blank"
             ><img
@@ -201,7 +201,7 @@
               width="20"
           /></a>
           <a
-            href="https://www.tiktok.com/@sasaimoett_?_t=8qImBKE9Cvn&_r=1"
+            href="https://www.tiktok.com/@ncyei?_t=8pcADUJPu5M&_r=1"
             class="cta"
             target="_blank"
             ><img
@@ -227,7 +227,7 @@
               <a
                 href="https://ryuuzenvs.github.io/NiaOnlineShop/#"
                 target="_blank"uu
-                ><h1>OnlineShop Website</h1></a
+                ><h1>NiaaOnlineShop Website</h1></a
               >
               <h2>Coding is Love</h2>
               <p>
@@ -242,10 +242,10 @@
               <img src="./img/Screenshot (11).png" alt="img" />
             </div>
           </div>
-          <!-- <div class="project-item">
+           <div class="project-item">
           <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Coding is Love</h2>
+            <a href=""><h1>Aplikasi NiaOnlineShop Untuk Mobile</h1></a>
+            <h2>Coding is love</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
@@ -254,7 +254,7 @@
             <img src="./img/img-1.png" alt="img">
           </div>
         </div>
-        <div class="project-item">
+        <!--<div class="project-item">
           <div class="project-info">
             <h1>Project 3</h1>
             <h2>Coding is Love</h2>
@@ -308,15 +308,9 @@
         </div>
         <div class="col-right">
           <h1 class="section-title">About <span>me</span></h1>
-          <h2>Front End Developer</h2>
+          <h2>Beginner Fullstack Web Developer</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Asperiores, velit alias eius non illum beatae atque repellat ratione
-            qui veritatis repudiandae adipisci maiores. At inventore
-            necessitatibus deserunt exercitationem cumque earum omnis ipsum rem
-            accusantium quis, quas quia, accusamus provident suscipit magni!
-            Expedita sint ad dolore, commodi labore nihil velit earum ducimus
-            nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!
+            Saya adalah seorang pelajar yang mempunyai skill pada bidang front end basic, dan sudah memiliki pengalaman back end web dev.
           </p>
           <a
             href="https://api.whatsapp.com/send?phone=6285767292629"
@@ -344,6 +338,16 @@
             target="_blank"
             ><img
               src="https://cdn-icons-png.flaticon.com/128/15713/15713399.png"
+              alt=""
+              height="20"
+              width="20"
+          /></a>
+          <a
+            href="https://github.com/Ryuuzenvs"
+            class="cta"
+            target="_blank"
+            ><img
+              src="https://img.icons8.com/?size=100&id=62856&format=png&color=000000"
               alt=""
               height="20"
               width="20"
@@ -403,7 +407,7 @@
         <div class="brand">
           <h1><span>A</span>makawa <span>R</span>yuuzen</h1>
         </div>
-        <h2>Front End Web Development</h2>
+        <h2>Beginner Fullstack Website Developer</h2>
         <div class="social-icon">
           <div class="social-item">
             <a
@@ -419,7 +423,7 @@
             /></a>
           </div>
         </div>
-        <p>Copyright © 2024 Amakawa Ryuuzen. All rights reserved</p>
+        <p>Copyright © 2024 Ahmad Perdahna. All rights reserved</p>
       </div>
     </section>
     <!-- End Footer -->
