--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <!--<h1 class="section-title">My <span>be</span>st support<span> </span></h1>
             <h2>Rizqy Amalia U</h2>
            <h1 class="section-title">best Supp<span>ort</span></h1>-->
-          <h2>Devina Ulfahnia Azzahra</h2> 
+          <h2>Syifa Nur Aulia</h2> 
            <!--<p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Asperiores, velit alias eius non illum beatae atque repellat ratione
