--- a/index.html
+++ b/index.html
@@ -55,18 +55,15 @@
         <div class="service-top">
           <h1 class="section-title">Cert<span>i</span>ficate</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum
-            deleniti maiores pariatur assumenda quas magni et, doloribus quod
-            voluptate quasi molestiae magnam officiis dolorum, dolor provident
-            atque molestias voluptatum explicabo!
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, fugit.
           </p>
         </div>
         <div class="service-bottom">
           <div class="service-item">
             <div class="icon">
-              <img
+              <!-- <img
                 src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              /> -->
             </div>
             <a
               href="pdf-sertifikat/GL2599686866_certificate (1).pdf"
@@ -75,16 +72,14 @@
               ><h3 class="pembuatLink">sertifikat/GL2599686866</h3></a
             >
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, a.
             </p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <img
+              <!-- <img
                 src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              /> -->
             </div>
             <a
               href="pdf-sertifikat/GL3334550354_certificate (2).pdf"
@@ -93,16 +88,14 @@
               ><h3 class="pembuatLink">sertifikat/GL3334550354</h3></a
             >
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore!
             </p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <img
+              <!-- <img
                 src="https://img.icons8.com/bubbles/100/000000/services.png"
-              />
+              /> -->
             </div>
             <a
               href="pdf-sertifikat/GL3440585192_certificate.pdf"
@@ -111,9 +104,7 @@
               ><h3 class="pembuatLink">sertifikat/GL3440585192</h3></a
             >
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates.
             </p>
           </div>
           <div class="service-item">
@@ -140,12 +131,12 @@
     <!-- End Service Section -->
 
     <!-- section galery -->
-    <section id="galery-nia">
+    <section id="galery-val">
       <div class="about container">
         <div class="col-left">
         <div class="about-img">
           <img
-          src="./img/nia1.jpg"
+          src="./img/val3.jpg"
           alt="img"
           />
           </div>
@@ -153,7 +144,7 @@
           <div class="col-left">
           <div class="about-img">
            <img
-           src="./img/nia1.png"
+           src="./img/val9.jpg"
            alt="img"
           />
         </div>
@@ -161,24 +152,18 @@
          <div class="col-left">
            <div class="about-img">
            <img
-            src="./img/nia3.jpg"
+            src="./img/val10.jpg"
           alt="img"
            />
            </div>
-           </div>
+          </div>
         <div class="col-right">
-            <!--<h1 class="section-title">My <span>be</span>st support<span> </span></h1>
-            <h2>Rizqy Amalia U</h2>
-           <h1 class="section-title">best Supp<span>ort</span></h1>-->
-          <h2>Syifa Nur Aulia</h2> 
+          <!--<h1 class="section-title">My <span>be</span>st support<span> </span></h1>
+          <h2>Rizqy Amalia U</h2>
+          <h1 class="section-title">best Supp<span>ort</span></h1>-->
+          <h2>Ifani Berliana Putri</h2>
            <!--<p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Asperiores, velit alias eius non illum beatae atque repellat ratione
-            qui veritatis repudiandae adipisci maiores. At inventore
-            necessitatibus deserunt exercitationem cumque earum omnis ipsum rem
-            accusantium quis, quas quia, accusamus provident suscipit magni!
-            Expedita sint ad dolore, commodi labore nihil velit earum ducimus
-            nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!
+           lorem10
           </p> 
            <a
             href="https://api.whatsapp.com/send?phone=6285767292629"
@@ -191,7 +176,7 @@
               width="20"
           /></a> -->
           <a
-            href="https://www.instagram.com/niyylf?igsh=dmdzZW9mNmJvYWE3"
+            href=""
             class="cta"
             target="_blank"
             ><img
@@ -201,7 +186,7 @@
               width="20"
           /></a>
           <a
-            href="https://www.tiktok.com/@ncyei?_t=8pcADUJPu5M&_r=1"
+            href=""
             class="cta"
             target="_blank"
             ><img
@@ -227,25 +212,21 @@
               <a
                 href="https://ryuuzenvs.github.io/NiaOnlineShop/#"
                 target="_blank"uu
-                ><h1>NiaaOnlineShop Website</h1></a
+                ><h1>OnlineShop Website</h1></a
               >
               <h2>Coding is Love</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                iusto cupiditate voluptatum impedit unde rem ipsa distinctio
-                illum quae mollitia ut, accusantium eius odio ducimus illo neque
-                atque libero non sunt harum? Ipsum repellat animi, fugit
-                architecto voluptatum odit et!
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem?
               </p>
             </div>
             <div class="project-img">
               <img src="./img/Screenshot (11).png" alt="img" />
             </div>
           </div>
-           <div class="project-item">
+          <!-- <div class="project-item">
           <div class="project-info">
-            <a href=""><h1>Aplikasi NiaOnlineShop Untuk Mobile</h1></a>
-            <h2>Coding is love</h2>
+            <h1>Project 2</h1>
+            <h2>Coding is Love</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
               rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
               harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
@@ -254,7 +235,7 @@
             <img src="./img/img-1.png" alt="img">
           </div>
         </div>
-        <!--<div class="project-item">
+        <div class="project-item">
           <div class="project-info">
             <h1>Project 3</h1>
             <h2>Coding is Love</h2>
@@ -308,9 +289,9 @@
         </div>
         <div class="col-right">
           <h1 class="section-title">About <span>me</span></h1>
-          <h2>Beginner Fullstack Web Developer</h2>
+          <h2>Front End Developer</h2>
           <p>
-            Saya adalah seorang pelajar yang mempunyai skill pada bidang front end basic, dan sudah memiliki pengalaman back end web dev.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, voluptas.
           </p>
           <a
             href="https://api.whatsapp.com/send?phone=6285767292629"
@@ -338,16 +319,6 @@
             target="_blank"
             ><img
               src="https://cdn-icons-png.flaticon.com/128/15713/15713399.png"
-              alt=""
-              height="20"
-              width="20"
-          /></a>
-          <a
-            href="https://github.com/Ryuuzenvs"
-            class="cta"
-            target="_blank"
-            ><img
-              src="https://img.icons8.com/?size=100&id=62856&format=png&color=000000"
               alt=""
               height="20"
               width="20"
@@ -407,7 +378,7 @@
         <div class="brand">
           <h1><span>A</span>makawa <span>R</span>yuuzen</h1>
         </div>
-        <h2>Beginner Fullstack Website Developer</h2>
+        <h2>Front End Web Development</h2>
         <div class="social-icon">
           <div class="social-item">
             <a
@@ -423,7 +394,7 @@
             /></a>
           </div>
         </div>
-        <p>Copyright © 2024 Ahmad Perdahna. All rights reserved</p>
+        <p>Copyright © 2024 Amakawa Ryuuzen. All rights reserved</p>
       </div>
     </section>
     <!-- End Footer -->
