--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
               ><h3 class="pembuatLink">sertifikat/GL8571191829</h3></a
             >
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              debitis rerum, magni voluptatem sed architecto placeat beatae
-              tenetur officia quod
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid?
             </p>
           </div>
         </div>
