--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
               <li><a href="#hero" data-after="Home">Home</a></li>
               <li><a href="#services" data-after="Service">Certificate</a></li>
-              <li><a href="#galery-val" data-after="Galery">BestSupp</a></li>
+              <!--<li><a href="#galery-val" data-after="Galery">BestSupp</a></li> -->
               <li><a href="#projects" data-after="Projects">Projects</a></li>
               <li><a href="#about" data-after="About">About</a></li>
               <li><a href="#contact" data-after="Contact">Contact</a></li>
@@ -42,8 +42,8 @@
         <div>
           <h1>Hello, <span></span></h1>
           <h1>With I'm Here<span></span></h1>
-          <h1>Amakawa Ryuuzen <span></span></h1>
-          <a href="#projects" type="button" class="cta">Scroll</a>
+          <h1>Ahmad <span></span>As Ryuu</h1>
+          <a href="#projects" type="button" class="cta">My project</a>
         </div>
       </div>
     </section>
@@ -55,15 +55,15 @@
         <div class="service-top">
           <h1 class="section-title">Cert<span>i</span>ficate</h1>
           <p>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, fugit.
+           sertifikat tanda capaian yang telah saya raih selama berkarir di industri pemmogramman.
           </p>
         </div>
         <div class="service-bottom">
           <div class="service-item">
             <div class="icon">
-              <!-- <img
+               <img
                 src="https://img.icons8.com/bubbles/100/000000/services.png"
-              /> -->
+              />
             </div>
             <a
               href="pdf-sertifikat/GL2599686866_certificate (1).pdf"
@@ -72,14 +72,14 @@
               ><h3 class="pembuatLink">sertifikat/GL2599686866</h3></a
             >
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, a.
+              Mengikuti program yang telah digelar oleh PT Educa Sisfomedia Indonesia
             </p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <!-- <img
+               <img
                 src="https://img.icons8.com/bubbles/100/000000/services.png"
-              /> -->
+              /> 
             </div>
             <a
               href="pdf-sertifikat/GL3334550354_certificate (2).pdf"
@@ -88,14 +88,14 @@
               ><h3 class="pembuatLink">sertifikat/GL3334550354</h3></a
             >
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore!
+              Mengikuti program peningkatan kompetensi Javascript untuk gamedev.
             </p>
           </div>
           <div class="service-item">
             <div class="icon">
-              <!-- <img
+               <img
                 src="https://img.icons8.com/bubbles/100/000000/services.png"
-              /> -->
+              /> 
             </div>
             <a
               href="pdf-sertifikat/GL3440585192_certificate.pdf"
@@ -104,8 +104,7 @@
               ><h3 class="pembuatLink">sertifikat/GL3440585192</h3></a
             >
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates.
-            </p>
+              Mengikuti program peningkatan kompetensi Game fundamental: Construct.
           </div>
           <div class="service-item">
             <div class="icon">
@@ -120,7 +119,7 @@
               ><h3 class="pembuatLink">sertifikat/GL8571191829</h3></a
             >
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid?
+              Mengikuti program peningkatan kompetensi ON BOARDING KELAS INDUSTRI GAMELAB.
             </p>
           </div>
         </div>
@@ -128,7 +127,7 @@
     </section>
     <!-- End Service Section -->
 
-    <!-- section galery -->
+    <!-- section galery 
     <section id="galery-val">
       <div class="about container">
         <div class="col-left">
@@ -158,7 +157,7 @@
         <div class="col-right">
           <!--<h1 class="section-title">My <span>be</span>st support<span> </span></h1>
           <h2>Rizqy Amalia U</h2>
-          <h1 class="section-title">best Supp<span>ort</span></h1>-->
+          <h1 class="section-title">best Supp<span>ort</span></h1>
           <h2>Ifani Berliana Putri</h2>
            <!--<p>
            lorem10
@@ -172,7 +171,7 @@
               alt=""
               height="20"
               width="20"
-          /></a> -->
+          /></a> 
           <a
             href=""
             class="cta"
@@ -196,7 +195,7 @@
         </div>
       </div>
       </section>
-    <!-- end section galery -->
+    end section galery -->
 
     <!-- Projects Section -->
     <section id="projects">
@@ -205,34 +204,48 @@
           <h1 class="section-title">Recent <span>Projects</span></h1>
         </div>
         <div class="all-projects">
+		
           <div class="project-item">
-            <div class="project-info">
+		  
+			<div class="project-info">
               <a
-                href="https://ryuuzenvs.github.io/NiaOnlineShop/#"
+                href="https://ryuuzenvs.github.io/RyuuOnlineShop/"
                 target="_blank"uu
                 ><h1>OnlineShop Website</h1></a
               >
-              <h2>Coding is Love</h2>
-              <p>
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem?
-              </p>
+              <h2>RyuuOnlineShop</h2>
+              <p>Aplikasi Todo List kami adalah solusi lengkap untuk mengelola tugas sehari-hari secara efisien. 
+			  Dengan antarmuka yang intuitif dan fitur canggih, aplikasi ini membantu Anda tetap terorganisir dan produktif.
+                    Dirancang untuk individu dan tim, aplikasi kami memungkinkan Anda membuat daftar tugas, 
+					mengatur proyek, menetapkan tenggat waktu, 
+					dan berkolaborasi dengan orang lain secara real-time.</p>
             </div>
+			
             <div class="project-img">
               <img src="./img/Screenshot (11).png" alt="img" />
             </div>
+			
           </div>
-          <!-- <div class="project-item">
+		  
+           <div class="project-item">
           <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <a
+                href="https://ryuu.page.gd/moyatodolist4.9/public/"
+                target="_blank"uu
+                ><h1>MoyaTodolist</h1></a
+              >
+            <h2>Ryuu as Owner Todo list App codeigniter4 framework with database phpmyadmin</h2>
+             <p>Aplikasi Todo List kami adalah solusi lengkap untuk mengelola tugas sehari-hari secara efisien. 
+			  Dengan antarmuka yang intuitif dan fitur canggih, aplikasi ini membantu Anda tetap terorganisir dan produktif.
+                    Dirancang untuk individu dan tim, aplikasi kami memungkinkan Anda membuat daftar tugas, 
+					mengatur proyek, menetapkan tenggat waktu, 
+					dan berkolaborasi dengan orang lain secara real-time.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
           </div>
         </div>
+		<!--
         <div class="project-item">
           <div class="project-info">
             <h1>Project 3</h1>
@@ -280,19 +293,22 @@
         <div class="col-left">
           <div class="about-img">
             <img
-              src="./img/WhatsApp Image 2024-08-14 at 14.00.31.jpeg"
+              src="https://i.ibb.co.com/k606dJny/ahmad.jpg"
               alt="img"
             />
           </div>
         </div>
         <div class="col-right">
           <h1 class="section-title">About <span>me</span></h1>
-          <h2>Front End Developer</h2>
+          <h2>Full Stack Developer ⚙️</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, voluptas.
+            utama di balik fungsionalitas utama aplikasi. 
+			bertanggung jawab atas seluruh ekosistem back-end dan front-end, 
+			memastikan semua fitur berjalan lancar dan terintegrasi dengan sempurna. 
+			Programmer dengan jembatan antara ide dan kode.
           </p>
           <a
-            href="https://api.whatsapp.com/send?phone=6285767292629"
+            href="https://api.whatsapp.com/send?phone=62855809839062"
             class="cta"
             target="_blank"
             ><img
@@ -321,6 +337,16 @@
               height="20"
               width="20"
           /></a>
+		  <a
+            href="https://github.com/Ryuuzenvs"
+            class="cta"
+            target="_blank"
+            ><img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png"
+              alt=""
+              height="20"
+              width="20"
+          /></a>
         </div>
       </div>
     </section>
@@ -339,7 +365,7 @@
             </div>
             <div class="contact-info">
               <h1>Phone</h1>
-              <h2>+62 857-6729-2629 (流 Ryuuzen.)</h2>
+              <h2>+62855 80983 9062 (流 Ryuuzen.)</h2>
             </div>
           </div>
           <div class="contact-item">
@@ -362,7 +388,7 @@
             </div>
             <div class="contact-info">
               <h1>Address</h1>
-              <h2>Tiban Indah, Sekupang, Batam, Kepulauan Riau, Indonesia</h2>
+              <h2>Batam, Kepulauan Riau, Indonesia</h2>
             </div>
           </div>
         </div>
@@ -376,7 +402,7 @@
         <div class="brand">
           <h1><span>A</span>makawa <span>R</span>yuuzen</h1>
         </div>
-        <h2>Front End Web Development</h2>
+        <h2>Full stack Web Development</h2>
         <div class="social-icon">
           <div class="social-item">
             <a
