--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
 			
             <div class="project-img">
-              <img src="./img/Screenshot (11).png" alt="img" />
+              <img src="https://i.ibb.co.com/bj911tG2/Screenshot-201.png" alt="Screenshot-201" border="0">
             </div>
 			
           </div>
