--- a/index.html
+++ b/index.html
@@ -215,11 +215,9 @@
                 ><h1>OnlineShop Website</h1></a
               >
               <h2>RyuuOnlineShop</h2>
-              <p>Aplikasi Todo List kami adalah solusi lengkap untuk mengelola tugas sehari-hari secara efisien. 
-			  Dengan antarmuka yang intuitif dan fitur canggih, aplikasi ini membantu Anda tetap terorganisir dan produktif.
-                    Dirancang untuk individu dan tim, aplikasi kami memungkinkan Anda membuat daftar tugas, 
-					mengatur proyek, menetapkan tenggat waktu, 
-					dan berkolaborasi dengan orang lain secara real-time.</p>
+              <p>Online shop yang masih hanya berjalan di front end, namun dapat dikembangkan lebih jauh dengan 
+			  php, framework laravel & codeigniter untuk ux yang lebih baik. Dari sisi front end nya sendiri sudah 100% 
+			  untuk dapat berjalan dengan back end side.</p>
             </div>
 			
             <div class="project-img">
