--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <!-- Header -->
     <section id="header">
-      <div class="header container">a
-        <div class="nav-bar">a
+      <div class="header container">
+        <div class="nav-bar">
           <div class="brand">
             <a href="#hero">
               <h1><span>A</span>makawa <span>R</span>yuuzen</h1>
@@ -573,6 +573,7 @@ https://ryuuzenvs.github.io/WebChekNilaiRaportRyuuzenvs/
     <script src="./app.js"></script>
   </body>
 </html>
+
 
 
 
