--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>WebsitePersonalRyuu</title>
   </head>
 
-  <body>a
+  <body>
     <!-- Header -->a
     <section id="header">
       <div class="header container">
@@ -573,6 +573,7 @@ https://ryuuzenvs.github.io/WebChekNilaiRaportRyuuzenvs/
     <script src="./app.js"></script>
   </body>
 </html>
+
 
 
 
