--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="header container">
         <div class="nav-bar">
           <div class="brand">
-            <a href="#hero">a
+            <a href="#hero">
               <h1><span>A</span>makawa <span>R</span>yuuzen</h1>
             </a>
           </div>
@@ -573,6 +573,7 @@ https://ryuuzenvs.github.io/WebChekNilaiRaportRyuuzenvs/
     <script src="./app.js"></script>
   </body>
 </html>
+
 
 
 
