--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-bar">
           <div class="brand">
             <a href="#hero">
-              <h1><span>A</span>makawa <span>R</span>yuuzen</h1>
+              <h1><span>A</span>makawa <span>R</span>yuu</h1>
             </a>
           </div>
           <div class="nav-list">
@@ -573,6 +573,7 @@ https://ryuuzenvs.github.io/WebChekNilaiRaportRyuuzenvs/
     <script src="./app.js"></script>
   </body>
 </html>
+
 
 
 
